# pulsarconsole

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  MISSING_FEATURES.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  nginx-frontend.conf  package-lock.json  package.json  release-please-config.json  run-docker-dev.sh  vite.config.ts
.claude/commands/: build-local.md  release.md
.github/workflows/: build-and-publish.yml  release-please.yml
backend/: .dockerignore  Dockerfile  README.md  check_db.py  docker-entrypoint.sh  pyproject.toml
backend/alembic/versions/: 001_initial_schema.py  002_auth_rbac.py  003_notifications.py  004_global_admin.py  005_fix_notifications.py  006_user_theme_preferences.py  007_oidc_group_mappings.py  008_notification_channels.py  20251227_000002_add_notifications.py  20251227_000006_add_superuser_token.py  20251228_191040_bec3b9a65fc5_add_visibility_and_ownership_to_.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  brokers.py  environment.py  messages.py  namespaces.py  notification_channels.py  notifications.py  pulsar_auth.py  subscriptions.py  topics.py  ws.py
backend/app/core/: __init__.py  database.py  events.py  exceptions.py  metrics.py  redis.py
backend/app/db/: seed_data.py
backend/app/middleware/: error_handler.py
backend/app/models/: __init__.py  environment.py  notification.py  notification_channel.py  notification_delivery.py  oidc_provider.py  user.py
backend/app/repositories/: environment.py  notification.py  notification_channel.py  notification_delivery.py  user.py
backend/app/schemas/: __init__.py  environment.py  notification_channel.py  subscription.py  topic.py
backend/app/services/: audit.py  auth.py  broker.py  cache.py  environment.py  message_browser.py  namespace.py  notification.py  notification_channel.py  notification_dispatcher.py  pulsar_admin.py  pulsar_auth.py  rbac.py  rbac_sync.py  seed.py  subscription.py  tenant.py  topic.py
backend/app/worker/: celery_app.py
backend/app/worker/tasks/: __init__.py  aggregation.py  alerts.py  cleanup.py  notification_delivery.py  stats_collection.py
backend/tests/: __init__.py
k8s/base/: kustomization.yaml
pulsar-conf/: credentials.json.template  lvm-root-ca.crt  public.key
scripts/: test_producer.py
src/: App.tsx  index.css  main.tsx
src/api/: client.ts  hooks.ts  types.ts
src/context/: AuthContext.tsx  ThemeContext.tsx
src/hooks/: index.ts  useAutoRefresh.ts  useRealtimeSync.ts
src/lib/: format.ts
src/pages/: AuditLogs.tsx  Brokers.tsx  Dashboard.tsx  Environment.tsx  LoginPage.tsx  Namespaces.tsx  Notifications.tsx  SubscriptionDetail.tsx  Subscriptions.tsx  TopicDetail.tsx  Topics.tsx
src/styles/: themes.css
src/test/: setup.ts
temp2/: README.md  docker-compose.yml  pulsar-admin.sh
temp2/secrets/: admin-token.txt  my-secret.key
(+24 files in other folders)
